--- a/Desktop/My_First_Portfolio/index.html
+++ b/Desktop/My_First_Portfolio/index.html
@@ -6,24 +6,33 @@
     <title>My First Portfolio</title>
 </head>
 <body>
-    <!-- Headings -->
-    <h1>Welcome to My Portfolio</h1>
-    <h2>About Me</h2>
-    <h3>Introduction</h3>
+    <!-- Header -->
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <!-- Paragraphs -->
-    <p>Hello! My name is Thelma, and I am excited to share my journey in web development with you.</p>
-    <p>I am passionate about creating engaging and user-friendly websites.</p>
-    <p>In this portfolio, you'll find my projects, skills, and experiences.</p>
-    <p>Feel free to explore and reach out if you have any questions!</p>
+    <!-- Main Content -->
+    <main>
+        <!-- Article -->
+        <article>
+            <h1>Welcome to My Portfolio</h1>
+            <p>Hello! My name is Thelma, and I am excited to share my journey in web development with you.</p>
+            <p>Feel free to explore and reach out if you have any questions!</p>
+            <p><a href="tweets.html">Check out my tweets!</a></p>
+        </article>
 
-    <!-- Clickable Image -->
-    <a href="file:///C:/Users/ACHAMAA/Desktop/fruit%20juice/index.html">
-   <img src="wallpaper.jpg" alt="wallpaper">
-    </a>
-    <!-- Add this link inside the body of index.html -->
-<p><a href="tweets.html">Check out my tweets!</a></p>
+        <!-- Aside -->
+        <aside>
+            <p>Placeholder to add comment thread later</p>
+        </aside>
+    </main>
 
-
-</body>  
+    <!-- Footer -->
+    <footer>
+        <p>Made by Thelma Buabeng - <a href="https://github.com/ThelmaBuabeng">here</a></p>
+    </footer>
+</body>
 </html>
