--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <img src="images/profile.jpeg" alt="Thelma Buabbeng">
             </div>
             <div class="hero-text">
-                <h1>Thelma Buabbeng</h1>
+                <h1>Thelma Buabeng</h1>
                 <h2>Full Stack Developer</h2>
                 <p>I build modern, responsive web applications using React.js, Node.js, and other cutting-edge technologies. With a passion for clean code and user experience, I create digital solutions that make an impact.</p>
                 
@@ -178,24 +178,30 @@
                     </div>
                 </div>
                 <div class="contact-form">
-                    <form>
+                    <div id="form-status" class="form-status"></div>
+                    <!-- Netlify Form with name attribute -->
+                    <form name="contact" method="POST" netlify netlify-honeypot="bot-field" id="contact-form">
+                        <input type="hidden" name="form-name" value="contact" />
+                        <p class="hidden">
+                            <label>Don't fill this out if you're human: <input name="bot-field" /></label>
+                        </p>
                         <div class="form-group">
                             <label for="name">Name</label>
-                            <input type="text" id="name" placeholder="Your Name">
+                            <input type="text" id="name" name="name" placeholder="Your Name" required>
                         </div>
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="email" id="email" placeholder="Your Email">
+                            <input type="email" id="email" name="email" placeholder="Your Email" required>
                         </div>
                         <div class="form-group">
                             <label for="subject">Subject</label>
-                            <input type="text" id="subject" placeholder="Subject">
+                            <input type="text" id="subject" name="subject" placeholder="Subject" required>
                         </div>
                         <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea id="message" placeholder="Your Message"></textarea>
+                            <textarea id="message" name="message" placeholder="Your Message" required></textarea>
                         </div>
-                        <button type="submit" class="btn">Send Message</button>
+                        <button type="submit" class="btn" id="submit-btn">Send Message</button>
                     </form>
                 </div>
             </div>
