--- a/index.html
+++ b/index.html
@@ -118,17 +118,18 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Task Management App" class="project-img">
+                    <img src="images/project 2.jpeg" alt="Electrical Management System" class="project-img">
                     <div class="project-content">
-                        <h3>Task Management App</h3>
-                        <p>A collaborative project management tool with real-time updates, task tracking, and team communication.</p>
+                        <h3>Electrical Management System</h3>
+                        <p>A web-based Electrical Management System that allows users to record, update, and track electrical work orders, helping companies transition from paper-based processes to a digital platform.</p>
                         <div class="project-tags">
-                            <span class="project-tag">React</span>
-                            <span class="project-tag">Firebase</span>
-                            <span class="project-tag">Material UI</span>
-                            <span class="project-tag">WebSockets</span>
+                            <span class="project-tag">HTML</span>
+                            <span class="project-tag">CSS</span>
+                            <span class="project-tag">JavaScript</span>
+                            <span class="project-tag">Node.js</span>
+                             <span class="project-tag">sqlite</span>
                         </div>
-                        <a href="https://example-taskapp.com" target="_blank" class="btn">View Project</a>
+                        <a href="" target="_blank" class="btn">View Project</a>
                     </div>
                 </div>
                 <div class="project-card">
