--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="hero" id="home">
         <div class="container hero-content">
             <div class="hero-image">
-                <img src="images/profile.jpeg" alt="Thelma Buabbeng">
+                <img src="images/profile.HEIC" alt="Thelma Buabbeng">
             </div>
             <div class="hero-text">
                 <h1>Thelma Buabeng</h1>
@@ -248,4 +248,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
