--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <nav>
                 <a href="#" class="logo">
-                    <img src="images/logo.jpeg" alt="Thelma Buabeng Logo">
+                    <img src="images/logo.HEIC" alt="Thelma Buabeng Logo">
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -248,4 +248,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
