--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <nav>
                 <a href="#" class="logo">
-                    <img src="images/logo.HEIC" alt="Thelma Buabeng Logo">
+                    <img src="images/logo.jpeg" alt="Thelma Buabeng Logo">
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -42,7 +42,7 @@
     <section class="hero" id="home">
         <div class="container hero-content">
             <div class="hero-image">
-                <img src="images/profile.jpeg" alt="Thelma Buabbeng">
+                <img src="images/profile.HEIC" alt="Thelma Buabbeng">
             </div>
             <div class="hero-text">
                 <h1>Thelma Buabeng</h1>
@@ -248,5 +248,4 @@
     <script src="script.js"></script>
 </body>
 </html>
-
 
