--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="footer-content">
                 <div class="footer-about">
                      <div class="footer-logo">
-                        <img src="images/logo.HEIC" alt="Thelma Buabeng Logo">
+                        <img src="images/logo.jpeg" alt="Thelma Buabeng Logo">
                     </div>
                     <p>Full Stack Developer specializing in modern web applications with React.js and Node.js.</p>
                     <div class="social-links">
@@ -248,4 +248,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
